# PteraSoftware

./: .codespell-ignore.txt  .gitignore  .pre-commit-config.yaml  BUILD.md  CLAUDE.md  CONTRIBUTING.md  LOGGING_REFACTOR_PLAN.md  README.md  main.py  make_installer.iss  mypy.ini  pyproject.toml  requirements.txt  requirements_ci.txt  requirements_ci_latest.txt  requirements_ci_min.txt  requirements_dev.txt  requirements_min.txt  setup.cfg
.claude/: DOCSTRINGS.md  settings.json  settings.local.json
.github/: CODEOWNERS  pull_request_template.md
benchmarks/: unsteady_benchmark.py  unsteady_benchmark_converge.py  unsteady_benchmark_timed.py
docs/: ANGLE_VECTORS_AND_ROTATION_MATRICES.md  ANGLE_VECTORS_AND_TRANSFORMATIONS.md  AXES_COORDINATES_AND_FRAMES.md  AXES_POINTS_AND_FRAMES.md  CODE_STYLE.md  RUNNING_TESTS_AND_TYPE_CHECKS.md  TYPE_HINT_AND_DOCSTRING_STYLE.md  WRITING_STYLE.md
examples/: __init__.py  analyze_steady_trim.py  analyze_steady_trim_example.py  analyze_unsteady_trim.py  analyze_unsteady_trim_example.py  flapping.py  steady_convergence.py  steady_convergence_example.py  steady_horseshoe_vortex_lattice_method_solver.py  steady_ring_vortex_lattice_method_solver.py  unsteady_ring_vortex_lattice_method_solver_static.py  unsteady_ring_vortex_lattice_method_solver_variable.py  unsteady_ring_vortex_lattice_method_solver_variable_formation.py  unsteady_static_convergence.py  unsteady_static_convergence_example.py  unsteady_variable_convergence.py  unsteady_variable_convergence_example.py
experimental/: GammaBot.py  Results10-03-2025.txt  dxf_to_csv.py  flat_plate.py  gammabot_approximate_wing.dxf  spaced_symmetric_flapping_flat_plate.py  spaced_symmetric_flat_plate.py
formation flight/: formation_flight.py  formation_flight_convergence.py
gui/: main.py
pterasoftware/: __init__.py  _aerodynamics.py  _functions.py  _logging.py  _panel.py  _parameter_validation.py  _transformations.py  aerodynamics.py  convergence.py  functions.py  geometry.py  legacy_functions.py  legacy_panel.py  meshing.py  movement.py  operating_point.py  (+8 more)
(+87 files in other folders)
