[metadata]
name = PteraSoftware
version = 4.0.1
author = Cameron Urban
author_email = camerongurban@gmail.com
license = MIT
description = This is an open-source, unsteady aerodynamics solver for analyzing flapping-wing flight.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/camurban/pterasoftware
project_urls =
	Bug Tracker = https://github.com/camurban/pterasoftware/issues
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
	Topic :: Scientific/Engineering :: Physics
	Topic :: Scientific/Engineering :: Visualization
	License :: OSI Approved :: MIT License
	Natural Language :: English
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: 3.12
	Programming Language :: Python :: 3.13
	Operating System :: OS Independent
	Typing :: Typed
keywords =
	python
	simulation
	aerospace
	aerodynamics
	aeronautics
	aircraft-design
	flight-dynamics
	cfd
	potential-flow
	panel-method
	vlm
	uvlm
	vortex-lattice-method
	unsteady-flows
	uav
	micro-air-vehicle
	ornithopter
	flapping-wing
	flapping-flight
	bio-inspired-robotics

[options]
packages =
	pterasoftware
	pterasoftware.geometry
	pterasoftware.movements
include_package_data = True
python_requires = >= 3.11.0, < 3.14.0
install_requires =
	cmocean >= 3.1.3, < 5.0.0
	matplotlib >= 3.9.3, < 4.0.0
	numba >= 0.61.0, < 1.0.0
	numpy >= 2.1.0, < 3.0.0
	PySide6 >= 6.8.1, < 7.0.0
	pyvista >= 0.45.0, < 1.0.0
	scipy >= 1.15.0, < 2.0.0
	tqdm >= 4.66.3, < 5.0.0
	webp >= 0.4.0, < 1.0.0
